[package]
name = "web_random"
version = "0.0.0"
authors = ["Richard Anaya"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "js_ffi for randomness"
repository = "https://github.com/richardanaya/web_random"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
js_ffi = "0.1"